--- a/.github/workflows/import.yml
+++ b/.github/workflows/import.yml
@@ -11,6 +11,13 @@ jobs:
           node-version: 20
       - run: npm ci --ignore-scripts
       - run: npx prisma generate --schema=prisma/schema.prisma
+
+      - name: Deploy DB schema
+        run: npx prisma migrate deploy --schema=prisma/schema.prisma
+        env:
+          DATABASE_URL: ${{ secrets.DIRECT_URL }}
+          DIRECT_URL: ${{ secrets.DIRECT_URL }}
+
       - name: Run CSV importer
         run: node scripts/import-termbase.mjs
         env:
