--- a/.github/workflows/import.yml
+++ b/.github/workflows/import.yml
@@ -12,6 +12,12 @@ jobs:
       - run: npm ci --ignore-scripts
       - run: npx prisma generate --schema=prisma/schema.prisma
 
+      - name: Reset DB (drop all objects in schema)
+        run: npx prisma migrate reset --force --skip-generate --schema=prisma/schema.prisma
+        env:
+          DATABASE_URL: ${{ secrets.DIRECT_URL }}
+          DIRECT_URL: ${{ secrets.DIRECT_URL }}
+
       - name: Deploy DB schema
         run: npx prisma migrate deploy --schema=prisma/schema.prisma
         env:
